--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MisCuentas</title>
+    <meta name="description" content="Aplicación para la contabilidad de gastos personales.">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#fff">
+    <meta name="theme-color" content="#2c3e50">
   </head>
   <body>
     <div id="root"></div>
